--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Steganography Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
   <body>
     <div id="nav" class="nav"></div>
-    <div id="posts" class="posts">{{posts}}</div>
+    <div class="container">
+      <table id="posts" class="table table-bordered">
+        <tbody>
+        </tbody>
+      </table>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='js/Dropbox-sdk.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+
+    <!--<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="sdxgad35qwnhtkc"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox/11.0.0/Dropbox-sdk.min.js"></script>-->
     <script>
       function loadUser() {
         if("{{logout}}" === "true") {
@@ -23,11 +37,11 @@
           return;
         }
       }
-    loadUser();
-    $(function(){
-      $("#nav").load("/nav");
-    });
+      $(function(){
+        $("#nav").load("/nav");
+        loadUser();
+        getPosts(null);
+      });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
