--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Steganographi Project</title>
+    <title>Steganography Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top" style="width:100%">
-      <a class="navbar-brand" style="margin-left:15px" href="/">Steganography Project</a>
+      <a class="navbar-brand" style="margin-left:15px" href="/">Steganographi Project</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
