--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
 </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top" style="width:100%">
-      <a class="navbar-brand" style="margin-left:15px" href="/">Steganographi Project</a>
+      <a class="navbar-brand" style="margin-left:15px" href="/">Steganography Project</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
