update file storage

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='js/Dropbox-sdk.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
 
     <!--<script src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="sdxgad35qwnhtkc"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/dropbox/11.0.0/Dropbox-sdk.min.js"></script>-->
