--- a/templates/myposts.html
+++ b/templates/myposts.html
@@ -20,8 +20,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='js/Dropbox-sdk.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-    <script>
+    <script type="module" src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script type="module">
+        import { getPosts, checkUser } from './static/js/index.js';
+    
         $(function(){
             var user = checkUser().UserID;
             $("#nav").load("/nav");
